Bug 205128 - (steps) Clear history btn in the konqueror history task (QMetaObject::activate, KonqHistoryProviderPrivate::notifyClear, HistorySidebarConfig::slotClearHistory)
Summary: (steps) Clear history btn in the konqueror history task (QMetaObject::activat...
Status: RESOLVED FIXED
Alias: None
Product: konqueror
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Unlisted Binaries Linux
: NOR crash
Target Milestone: ---
Assignee: Konqueror Bugs
URL:
Keywords:
: 211468 211889 212180 215636 216762 222414 223615 224556 224577 225693 225968 230351 231426 232250 232426 232427 234358 (view as bug list)
Depends on:
Blocks:
 
Reported: 2009-08-25 21:40 UTC by Nicola
Modified: 2010-04-14 21:38 UTC (History)
19 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nicola 2009-08-25 21:40:19 UTC
Application that crashed: kcmshell4
Version of the application: 
KDE Version: 4.3.00 (KDE 4.3.0)
Qt Version: 4.5.2
Operating System: Linux 2.6.28-11-generic i686
Distribution: Ubuntu 9.04

What I was doing when the application crashed:
Hi,
 when I click the button clean history I get a segmentation fault and my history can not be cleaned :-(

 -- Backtrace:
Application: KDE Control Module (kcmshell4), signal: Segmentation fault
[KCrash Handler]
#6  0xb77e2e57 in QMetaObject::activate () from /usr/lib/libQtCore.so.4
#7  0xb46f2637 in ?? () from /usr/lib/libkonq.so.5
#8  0xb470b41d in ?? () from /usr/lib/kde4/kcm_history.so
#9  0xb470b96b in ?? () from /usr/lib/kde4/kcm_history.so
#10 0xb77e21b8 in QMetaObject::activate () from /usr/lib/libQtCore.so.4
#11 0xb77e25f0 in QMetaObject::activate () from /usr/lib/libQtCore.so.4
#12 0xb7441f91 in QAbstractButton::clicked () from /usr/lib/libQtGui.so.4
#13 0xb71693e9 in ?? () from /usr/lib/libQtGui.so.4
#14 0xb716b044 in ?? () from /usr/lib/libQtGui.so.4
#15 0xb716b2d6 in QAbstractButton::mouseReleaseEvent () from /usr/lib/libQtGui.so.4
#16 0xb6e07973 in QWidget::event () from /usr/lib/libQtGui.so.4
#17 0xb716928e in QAbstractButton::event () from /usr/lib/libQtGui.so.4
#18 0xb7214050 in QPushButton::event () from /usr/lib/libQtGui.so.4
#19 0xb6db0d3c in QApplicationPrivate::notify_helper () from /usr/lib/libQtGui.so.4
#20 0xb6db99b1 in QApplication::notify () from /usr/lib/libQtGui.so.4
#21 0xb7d2d5cd in KApplication::notify () from /usr/lib/libkdeui.so.5
#22 0xb77ccbcb in QCoreApplication::notifyInternal () from /usr/lib/libQtCore.so.4
#23 0xb6db8a1e in QApplicationPrivate::sendMouseEvent () from /usr/lib/libQtGui.so.4
#24 0xb6e28cce in ?? () from /usr/lib/libQtGui.so.4
#25 0xb6e28085 in QApplication::x11ProcessEvent () from /usr/lib/libQtGui.so.4
#26 0xb6e5337a in ?? () from /usr/lib/libQtGui.so.4
#27 0xb63ccb88 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#28 0xb63d00eb in ?? () from /usr/lib/libglib-2.0.so.0
#29 0xb63d0268 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#30 0xb77f82f8 in QEventDispatcherGlib::processEvents () from /usr/lib/libQtCore.so.4
#31 0xb6e52a75 in ?? () from /usr/lib/libQtGui.so.4
#32 0xb77cb1fa in QEventLoop::processEvents () from /usr/lib/libQtCore.so.4
#33 0xb77cb642 in QEventLoop::exec () from /usr/lib/libQtCore.so.4
#34 0xb72a2723 in QDialog::exec () from /usr/lib/libQtGui.so.4
#35 0xb7f37b1d in kdemain () from /usr/lib/libkdeinit4_kcmshell4.so
#36 0x08048642 in _start ()

Reported using DrKonqi
Comment 1 Nicola 2009-08-25 22:00:18 UTC
with the latest kde 4.3 upgrade the problem still exists.
Comment 2 Dario Andres 2009-08-25 23:12:42 UTC
- If you can reproduce the crash at will (or you experience this regularly), can you install the "kdebase-apps-dbg" package and post a complete backtrace here? Thanks
Comment 3 Nicola 2009-08-27 21:05:37 UTC
Hi Andreas,
  it happens anytime that I use the button. In fact up to now I've not been able to clean the historical data...
Here I send you the stack trace that you've asked for..


Application: KDE Control Module (kcmshell4), signal: Segmentation fault
[KCrash Handler]
#6  QMetaObject::activate (sender=0x31, m=0xb455cc80, local_signal_index=3, argv=0x0) at kernel/qobject.cpp:3183
#7  0xb4554637 in KonqHistoryProviderPrivate::notifyClear (this=0x31) at /build/buildd/kdebase-4.3.0/obj-i486-linux-gnu/apps/lib/konq/konq_historyprovider.moc:136
#8  0xb457f41d in HistorySidebarConfig::slotClearHistory (this=0x9b48948) at /build/buildd/kdebase-4.3.0/apps/konqueror/sidebar/trees/history_module/kcmhistory.cpp:258
#9  0xb457f96b in HistorySidebarConfig::qt_metacall (this=0x9b48948, _c=QMetaObject::InvokeMetaMethod, _id=6, _a=0xbfbf6a4c)
    at /build/buildd/kdebase-4.3.0/obj-i486-linux-gnu/apps/konqueror/sidebar/trees/history_module/kcmhistory.moc:81
#10 0xb796d1b8 in QMetaObject::activate (sender=0x9bf5828, from_signal_index=29, to_signal_index=30, argv=0xbfbf6a4c) at kernel/qobject.cpp:3113
#11 0xb796d5f0 in QMetaObject::activate (sender=0x9bf5828, m=0xb77b60a4, from_local_signal_index=2, to_local_signal_index=3, argv=0xbfbf6a4c) at kernel/qobject.cpp:3207
#12 0xb75ccf91 in QAbstractButton::clicked (this=0x9bf5828, _t1=false) at .moc/release-shared/moc_qabstractbutton.cpp:200
#13 0xb72f43e9 in QAbstractButtonPrivate::emitClicked (this=0x9bf5840) at widgets/qabstractbutton.cpp:543
#14 0xb72f6044 in QAbstractButtonPrivate::click (this=0x9bf5840) at widgets/qabstractbutton.cpp:536
#15 0xb72f62d6 in QAbstractButton::mouseReleaseEvent (this=0x9bf5828, e=0xbfbf7028) at widgets/qabstractbutton.cpp:1115
#16 0xb6f92973 in QWidget::event (this=0x9bf5828, event=0xbfbf7028) at kernel/qwidget.cpp:7549
#17 0xb72f428e in QAbstractButton::event (this=0x9bf5828, e=0xbfbf7028) at widgets/qabstractbutton.cpp:1077
#18 0xb739f050 in QPushButton::event (this=0x9bf5828, e=0xbfbf7028) at widgets/qpushbutton.cpp:662
#19 0xb6f3bd3c in QApplicationPrivate::notify_helper (this=0x996e310, receiver=0x9bf5828, e=0xbfbf7028) at kernel/qapplication.cpp:4056
#20 0xb6f449b1 in QApplication::notify (this=0xbfbf8a8c, receiver=0x9bf5828, e=0xbfbf7028) at kernel/qapplication.cpp:3758
#21 0xb7eb85cd in KApplication::notify (this=0xbfbf8a8c, receiver=0x9bf5828, event=0xbfbf7028) at /build/buildd/kde4libs-4.3.0/kdeui/kernel/kapplication.cpp:302
#22 0xb7957bcb in QCoreApplication::notifyInternal (this=0xbfbf8a8c, receiver=0x9bf5828, event=0xbfbf7028) at kernel/qcoreapplication.cpp:610
#23 0xb6f43a1e in QApplicationPrivate::sendMouseEvent (receiver=0x9bf5828, event=0xbfbf7028, alienWidget=0x9bf5828, nativeWidget=0x9a988b8, buttonDown=0xb77bdaa0, lastMouseReceiver=@0xb77bdaa4)
    at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:216
#24 0xb6fb3cce in QETWidget::translateMouseEvent (this=0x9a988b8, event=0xbfbf86bc) at kernel/qapplication_x11.cpp:4409
#25 0xb6fb3085 in QApplication::x11ProcessEvent (this=0xbfbf8a8c, event=0xbfbf86bc) at kernel/qapplication_x11.cpp:3428
#26 0xb6fde37a in x11EventSourceDispatch (s=0x99710b0, callback=0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:146
#27 0xb6557b88 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#28 0xb655b0eb in ?? () from /usr/lib/libglib-2.0.so.0
#29 0xb655b268 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#30 0xb79832f8 in QEventDispatcherGlib::processEvents (this=0x9958d10, flags={i = -1077966728}) at kernel/qeventdispatcher_glib.cpp:327
#31 0xb6fdda75 in QGuiEventDispatcherGlib::processEvents (this=0x9958d10, flags={i = -1077966680}) at kernel/qguieventdispatcher_glib.cpp:202
#32 0xb79561fa in QEventLoop::processEvents (this=0xbfbf891c, flags={i = -1077966616}) at kernel/qeventloop.cpp:149
#33 0xb7956642 in QEventLoop::exec (this=0xbfbf891c, flags={i = -1077966556}) at kernel/qeventloop.cpp:201
#34 0xb742d723 in QDialog::exec (this=0x9a988b8) at dialogs/qdialog.cpp:498
#35 0xb80c2b1d in kdemain (_argc=2, _argv=0xbfbf8de4) at /build/buildd/kdebase-runtime-4.3.0/kcmshell/main.cpp:267
#36 0x08048642 in main (argc=) at /build/buildd/kdebase-runtime-4.3.0/obj-i486-linux-gnu/kcmshell/kcmshell4_dummy.cpp:3



bye
Comment 4 Dario Andres 2009-09-04 22:32:12 UTC
Thanks
Comment 5 Dario Andres 2009-09-04 22:41:13 UTC
Here using:

Qt: 4.5.2 (KDE-Qt git commit 5b7a2eb42acfdea07c6075556cb43e2c95852145
        Date:   Tue Jul 28 14:10:47 2009 -0300)
KDE: 4.3.66 (KDE 4.3.66 (KDE 4.4 >= 20090828))
kdelibs svn rev. 1019000 / kdebase svn rev. 1019000
on ArchLinux i686 - Kernel 2.6.30.5

I can reproduce the crash:

- Run "kcmshell4 kcmhistory"
- Click "Clear History", click Yes.
kcmshell4 crashes

This doesn't happen if the KCM is shown under Konqueror Settings

The kcmhistory source and desktop files are in my 4.4trunk SVN copy, so they were not deprecated/updated to the History "sidebar -> standalone window".

-- Backtrace:

Application: KDE Control Module (kcmshell4), signal: Segmentation fault
[KCrash Handler]
#6  0xb759e930 in QObject::d_func (this=0xba) at ../../include/QtCore/../../src/corelib/kernel/qobject.h:118
#7  0xb76c8d13 in QMetaObject::activate (sender=0xba, m=0xb4313dc0, local_signal_index=3, argv=0x0) at kernel/qobject.cpp:3182
#8  0xb43086d7 in KonqHistoryProviderPrivate::notifyClear (this=0xba) at /home/kde-devel/kde/build/KDE/kdebase/apps/lib/konq/konq_historyprovider.moc:136
#9  0xb431a415 in HistorySidebarConfig::slotClearHistory (this=0x8c7f590) at /home/kde-devel/kde/src/KDE/kdebase/apps/konqueror/sidebar/trees/history_module/kcmhistory.cpp:256
#10 0xb431a963 in HistorySidebarConfig::qt_metacall (this=0x8c7f590, _c=QMetaObject::InvokeMetaMethod, _id=42, _a=0xbf9bbe78)
    at /home/kde-devel/kde/build/KDE/kdebase/apps/konqueror/sidebar/trees/history_module/kcmhistory.moc:81
Comment 6 Dario Andres 2009-10-22 23:25:47 UTC
*** Bug 211468 has been marked as a duplicate of this bug. ***
Comment 7 Dario Andres 2009-10-26 13:18:08 UTC
*** Bug 211889 has been marked as a duplicate of this bug. ***
Comment 8 Dario Andres 2009-10-28 16:44:13 UTC
*** Bug 212180 has been marked as a duplicate of this bug. ***
Comment 9 Christoph Feck 2009-11-23 02:41:17 UTC
*** Bug 215636 has been marked as a duplicate of this bug. ***
Comment 10 Christoph Feck 2009-11-30 16:22:41 UTC
*** Bug 216762 has been marked as a duplicate of this bug. ***
Comment 11 Dario Andres 2010-01-12 18:53:49 UTC
*** Bug 222414 has been marked as a duplicate of this bug. ***
Comment 12 Maksim Orlovich 2010-01-12 19:18:16 UTC
No KonqHistoryProvider in the kcm when run via the shell, and so 
KonqHistoryProvider::self() returns a (mis)cast KParts::HistoryProvider::self.

Very annoying.
Comment 13 Maksim Orlovich 2010-01-12 19:34:25 UTC
SVN commit 1073717 by orlovich:

Add a method needed to fix #205128

CCBUG:205128


 M  +5 -0      historyprovider.cpp  
 M  +6 -0      historyprovider.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1073717
Comment 14 Maksim Orlovich 2010-01-12 19:35:17 UTC
SVN commit 1073721 by orlovich:

automatically merged revision 1073717:
Add a method needed to fix #205128

CCBUG:205128

 M  +5 -0      historyprovider.cpp  
 M  +6 -0      historyprovider.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1073721
Comment 15 Maksim Orlovich 2010-01-12 19:37:45 UTC
SVN commit 1073724 by orlovich:

Create the appropriate history provider when running outside konq

BUG: 205128


 M  +3 -0      kcmhistory.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1073724
Comment 16 Maksim Orlovich 2010-01-12 19:57:00 UTC
SVN commit 1073730 by orlovich:

automatically merged revision 1073724:
Create the appropriate history provider when running outside konq

BUG: 205128

 M  +3 -0      kcmhistory.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1073730
Comment 17 Dario Andres 2010-01-20 21:28:52 UTC
*** Bug 223615 has been marked as a duplicate of this bug. ***
Comment 18 Christoph Feck 2010-01-28 01:28:10 UTC
*** Bug 224556 has been marked as a duplicate of this bug. ***
Comment 19 Dario Andres 2010-01-31 01:02:15 UTC
*** Bug 224577 has been marked as a duplicate of this bug. ***
Comment 20 Dario Andres 2010-02-07 00:01:38 UTC
*** Bug 225693 has been marked as a duplicate of this bug. ***
Comment 21 Dario Andres 2010-02-10 13:36:36 UTC
*** Bug 225968 has been marked as a duplicate of this bug. ***
Comment 22 Christoph Feck 2010-03-11 22:28:33 UTC
*** Bug 230351 has been marked as a duplicate of this bug. ***
Comment 23 Dario Andres 2010-03-20 16:11:06 UTC
*** Bug 231426 has been marked as a duplicate of this bug. ***
Comment 24 Christoph Feck 2010-03-26 18:06:40 UTC
*** Bug 232250 has been marked as a duplicate of this bug. ***
Comment 25 Christoph Feck 2010-03-28 10:06:03 UTC
*** Bug 232426 has been marked as a duplicate of this bug. ***
Comment 26 Christoph Feck 2010-03-28 10:06:26 UTC
*** Bug 232427 has been marked as a duplicate of this bug. ***
Comment 27 Christoph Feck 2010-04-14 21:38:04 UTC
*** Bug 234358 has been marked as a duplicate of this bug. ***