Create the appropriate history provider when running outside konq

BUG: 205128

svn path=/trunk/KDE/kdebase/apps/; revision=1073724